--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mose wela shootout Game | fun and eye opening</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PGVLY0YH3J"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-PGVLY0YH3J');
+    </script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,7 +25,7 @@
             &#9658;
         </div>
         <p class="terms">
-            by continuing to play the game you agree to <a href="http://">terms and conditions</a> of the game
+            by continuing to play the game you agree to <a href="https://github.com/vaibhavCodian/siduMuseWela/blob/3df6f4af2d1359deb846bf33f119ecf8ac48114f/README.md">terms and conditions</a> of the game
         </p>
     </div>
     <div id="gameScreen" onclick="shootSound()">
@@ -43,7 +52,7 @@
             &#9658;
         </div>
         <p class="terms">
-            by continuing to play the game you agree to <a href="http://">terms and conditions</a> of the game
+            by continuing to play the game you agree to <a href="https://github.com/vaibhavCodian/siduMuseWela/blob/3df6f4af2d1359deb846bf33f119ecf8ac48114f/README.md">terms and conditions</a> of the game
         </p>
     </div>
 
