--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mose wela shootout Game | fun and eye opening</title>
+    <title>Sidu Mose Wela shootout Game | G.O.A.T | 295 </title>
+    <meta name="og:title" property="og:title" content="Sidu Mose Wela shootout Game | G.O.A.T | 295 || Singer | Game">
+    <meta name="description" content="Game as a tribute and awareness to gun violence. use of guns should be prohibited unless used for self defence.! , sidhu mose wala was killed and we morn for that but to be considered is gun violence should not be glorified in movies and songs as it sends a bad impression on the youth of the todays generation.">
+    <meta name="robots" content="index, follow">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-PGVLY0YH3J"></script>
     <script>
@@ -15,6 +18,8 @@
     gtag('config', 'G-PGVLY0YH3J');
     </script>
     <link rel="stylesheet" href="style.css">
+    <link href="URL" rel="canonical">
+    
 </head>
 <body>
     <div id="startScreen">
@@ -34,13 +39,13 @@
             295
         </h2>
         <div class="enemy" id="enemy1" onclick="iShoot(this)">
-            <img src="utils/img4.png" alt="utils/img3.png" srcset="">
+            <img src="utils/img4.png" alt="sidhu mose wala cut out 1" srcset="">
         </div>
         <div class="enemy" id="enemy2" onclick="iShoot(this)">
-            <img src="utils/img2.png" alt="utils/img5.png" srcset="">
+            <img src="utils/img2.png" alt="sidhu mose wala cut out 2" srcset="">
         </div>
         <div class="enemy" id="enemy3" onclick="iShoot(this)">
-            <img src="utils/img6.png" alt="utils/img6.png" srcset="">
+            <img src="utils/img6.png" alt="sidhu mose wala cut out 3" srcset="">
         </div>
     </div>
     <div id="deadScreen">
