--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <div id="startScreen">
-        <h3>Sidu Muse Wela Shooter Game <span> &#9888; </span></h3>
+        <h3>Sidu Muse Wela Shooter Game <span> </span></h3>
         <h4>DO NOT SUPPORT GUN VIOLENCE</h4>
 
         <div class="play" onclick="play()">
